@@ -7,6 +7,7 @@ v0.10.2 (??.07.2011) (not released)
  * SimpleMarker: Default constructor with options array 
  * ListBuilder: SubpartMarker respects english orthography. ###COMPANIES### -> ###COMPANY###
  * It is optional possible to load hidden objects if BE user is logged in. This works mainly for detail pages of plugins.
+ * New class for default single view
 
 v0.10.1 (18.07.2011) (not released)
  * BaseFilter: Additional TS path to define filter class: filter.class
